<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewSkillSetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_skill_set_fragment_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_main_background_newSkill_fragment">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_one"
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:cardBackgroundColor="@color/fragment_new_skill_set"
            app:cardCornerRadius="10dp"
            app:contentPadding="@dimen/card_padding"
            app:layout_constraintBottom_toTopOf="@+id/card_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/new_skillSet_name"
                style="@style/fragment_new_skill_set_form_text_style2"
                android:text="@string/name_semicolon" />

            <TextView
                android:id="@+id/new_skillSet_missing_name"
                style="@style/missing_field_error_warningNew"
                android:text="@string/name_can_not_be_blank"
                android:visibility="gone" />

            <EditText
                android:id="@+id/new_skillSet_name_input"
                style="@style/fragment_new_skill_set_user_form_style3"
                android:autofillHints="@string/fragment_new_skill_set_hint_value_for_user_input"
                android:hint="@string/fragment_new_skill_set_hint_value_for_user_input"
                android:inputType="text" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_two"
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/fragment_new_skill_set"
            app:cardCornerRadius="10dp"
            app:contentPadding="@dimen/card_padding"
            app:layout_constraintBottom_toTopOf="@+id/card_three"
            app:layout_constraintEnd_toEndOf="@+id/card_one"
            app:layout_constraintStart_toStartOf="@+id/card_one"
            app:layout_constraintTop_toBottomOf="@+id/card_one">


            <TextView
                android:id="@+id/new_skillSet_description"
                style="@style/fragment_new_skill_set_form_text_style2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_semicolon" />

            <TextView
                android:id="@+id/new_skillSet_missing_description"
                style="@style/missing_field_error_warningNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_can_not_be_blank"
                android:visibility="gone" />

            <EditText
                android:id="@+id/new_skillSet_description_input"
                style="@style/fragment_new_skill_set_user_form_style3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/fragment_new_skill_set_form_hint_desription"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />
            <!--android:background="@drawable/custom_input_style"/>-->

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_three"
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/fragment_new_skill_set"
            app:cardCornerRadius="10dp"
            app:contentPadding="@dimen/card_padding"
            app:layout_constraintBottom_toTopOf="@+id/create_new_skillSet_button"
            app:layout_constraintEnd_toEndOf="@+id/card_two"
            app:layout_constraintStart_toStartOf="@+id/card_two"
            app:layout_constraintTop_toBottomOf="@+id/card_two">

            <TextView
                android:id="@+id/add_skills"
                style="@style/fragment_new_skill_set_form_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_skills_from_another_skillSet" />

            <com.example.skilltracker.MultiSelectionSpinner
                android:id="@+id/skill_multi_select_list"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="40sp"
                android:layout_marginRight="40sp"
                android:background="@drawable/custom_spinner"
                android:spinnerMode="dropdown" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_four"
            style="@style/card_style"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/fragment_new_skill_set"
            app:cardCornerRadius="10dp"
            app:contentPadding="@dimen/card_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/card_three"
            app:layout_constraintStart_toStartOf="@+id/card_three"
            app:layout_constraintTop_toBottomOf="@+id/create_new_skillSet_button"
            tools:visibility="visible">

            <TextView
                android:id="@+id/current_skills_label"
                style="@style/fragment_new_skill_set_form_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills_already_newLine_added"
                android:textAlignment="center"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/card_four"
                app:layout_constraintStart_toStartOf="@+id/card_four"
                app:layout_constraintTop_toBottomOf="@+id/card_four" />

            <ListView
                android:id="@+id/current_skills_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="150dp"
                android:layout_marginBottom="5dp"
                android:isScrollContainer="true"
                android:scrollbars="vertical"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/card_four"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/card_four"
                app:layout_constraintTop_toBottomOf="@+id/card_four" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/create_new_skillSet_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/new_skillSet_body_padding"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_button_one"
            android:text="@string/create_skill_set"
            android:textColor="@color/fragment_new_skill_set_button_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/card_four"
            app:layout_constraintEnd_toStartOf="@+id/add_new_skills_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_three" />

        <Button
            android:id="@+id/add_new_skills_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/new_skillSet_body_padding"
            android:background="@drawable/custom_button_one"
            android:text="@string/add_new_skills"
            android:textColor="@color/fragment_new_skill_set_button_text_color"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/create_new_skillSet_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/create_new_skillSet_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>